src/test/ui/generator/issue-91477.rs
#![feature(generators)]

fn foo() -> impl Sized {
    yield 1; //~ ERROR E0627
}

fn main() {}
